...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KeP-2e-lCu">
                                <rect key="frame" x="497" y="317" width="200" height="200"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="JOf-gX-FU6"/>
                                    <constraint firstAttribute="width" constant="200" id="PMg-Mn-Ibp"/>
                                </constraints>
                                <state key="normal" title="Button" image="MainMenu_StartButton"/>
                                <connections>
                                    <segue destination="lDo-HC-Lf8" kind="presentation" modalPresentationStyle="fullScreen" id="mrO-P9-hWj"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MO-dh-H4M">
                                <rect key="frame" x="836" y="385" width="197" height="200"/>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MB3-TY-hXu">
                                <rect key="frame" x="805" y="577" width="97" height="96"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="32"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" red="0.2313431799" green="0.23138946290000001" blue="0.2313401997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="Done:" destination="7xa-yS-hdQ" eventType="touchUpInside" id="piF-sU-86z"/>
                                    <segue destination="zRe-Jb-N92" kind="presentation" modalPresentationStyle="fullScreen" id="suf-qY-ERh"/>
                                </connections>
...
